# OS

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml
benchmark/: ema-search-str.c  short-path.c  stress-test  substring.txt  test.txt  trace.sh
lab1/benchmark/: ema-search-str.c
lab1/shell/: shell-test.sh
lab2/: ema-search-str.cpp  hard-test.txt  lab2.cpp  stress-test.cpp
shell/: main.c  shell-test.sh
